# quake-kube

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.nix  Makefile  README.md  Tiltfile  config.yaml  example.yaml  flake.nix  go.mod  go.sum  gomod2nix.toml
.github/workflows/: publish-docs.yaml  push-image.yaml  test.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: configmap.yaml  deployment.yaml  service.yaml
cmd/q3/: main.go
cmd/q3/app/content/: content.go
cmd/q3/app/proxy/: proxy.go
cmd/q3/app/run/: run.go
cmd/q3/app/server/: server.go
cmd/q3/app/upload/: upload.go
controllers/: Cargo.toml  example.yaml
controllers/src/: controller.rs  error.rs  list_server.rs  list_server_controller.rs  main.rs  prelude.rs  quake_server.rs  quake_server_controller.rs
docs/: book.toml  nix.md
docs/src/: README.md  SUMMARY.md  add-bots.md  add-custom-maps.md  configuration.md  credits.md  getting-started.md  how-it-works.md  setting-a-password.md  todo.md
hack/tools/: go.mod  go.sum  tools.go
internal/log/: log.go
internal/quake/client/: httpserver.go  proxyserver.go  static.go
internal/quake/content/: httpserver.go  rpcserver.go
internal/quake/content/util/: files.go  maps.go
internal/quake/server/: EULA.txt  config.go  config_test.go  gamefiles.go  server.go
internal/run/: run.go
internal/util/exec/: exec.go
internal/util/fs/: ext.go  walk.go
internal/util/net/: net.go
pkg/must/: must.go
pkg/mux/: mux.go
pkg/quake/net/: net.go
proto/content/v1/: assets.proto
proto/content/v2/: assets.proto
(+7 files in other folders)
