[package]
name = "quake-kube-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["rustls-tls", "kubederive", "ws", "latest", "socks5", "runtime", "refresh"]
default = ["rustls-tls", "kubederive", "ws", "socks5", "runtime", "refresh"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime", "kube/unstable-runtime"]
socks5 = ["kube/socks5"]
refresh = ["kube/oauth", "kube/oidc"]
ws = ["kube/ws"]
# latest = ["k8s-openapi/latest"]

[dependencies]
k8s-openapi = { version = "0.21.0", features = ["v1_27"]}
tokio = { version = "1.14.0", features = ["full"] }
kube = "0.88.1"
anyhow = "1.0.44"
futures = "0.3.17"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.19"
schemars = "0.8.6"
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
thiserror = "1.0.29"
json-patch = "1.2.0"
